<resources>
    <string name="en_tete_layout_gauche1">Guide Rust</string>
    <string name="en_tete_layout_gauche2">Tout ce qu"'il faut savoir sur Rust</string>
    <string name="about_rust">A propos de Rust</string>
    <string name="armes">Armes</string>
    <string name="resource">Ressources</string>
    <string name="ammunition">Munitions</string>
    <string name="tools">Outils</string>
    <string name="map">La carte</string>
    <string name="description">Description du jeu</string>
    <string name="about_us">A propos de nous</string>
    <string name="more">En plus...</string>
    <string name="listview_version">Version listview/adapter</string>
    <string name="app_name">Rust Guide</string>
    <string name="video_survie">Vidéo - Survie Basique </string>
    <string name="video_build">Vidéo - Construction </string>
    <string name="devblog95">#96 Dev Blog - Rust </string>
    <string name="guidecomplet">Guide Complet - Rust</string>
    <string name="site_officiel_header">Site Officiel - Rust</string>
    <string name="site_officiel_button">Accéder au site officiel de Rust</string>
    <string name="site_officiel_title">Le site officiel de Rust - rustplay.com</string>
    <string name="site_officiel_description">Découvrez toutes les nouveautés du jeu Rust, les mises à jours, les forums de la communauté, les fan arts et bien d"'autres encore sur le site officiel dédié au jeu :\n\n<b>http://playrust.com</b>.</string>
    <string name="guidecomplet_acces">Accéder à notre guide complet</string>
    <string name="devblog_title">#DevBlog 96 - Optimisations graphiques</string>
    <string name="devblog_description_courte">Dans ce nouveau DebBlog n°96, nous pouvons tout d"'abord trouver <b>une optimisation graphique des dungeons</b>.\n\nDe nouveaux items voient aussi le jour comme <b>la lampe murale</b>, mais aussi de nouveaux items corporels.</string>
    <string name="detail_article">Voir cet article</string>
    <string name="guidevideo1_title">La survie dans Rust - Youtube</string>
    <string name="guidevideo2_title">La construction dans Rust - Youtube</string>
    <string name="guidevideo1_description">Vidéo Youtube de la chaine <b>JosInGame</b>, vous apprendrez ici comment survivre à votre première nuit dans le jeu mais aussi comment <b>bien débuter</b></string>
    <string name="guidevideo2_description">Vidéo Youtube de la chaine <b>JosInGame</b>, cette fois-ci vous apprendrez comment construire votre première maison mais aussi comment <b>optimiser votre abris</b> pour le rendre moins vulnérable aux raids</string>
    <string name="guidevideo_titre">Guide Rust - En Video</string>
    <string name="guidevideo1">#1 Survivre en milieu hostile</string>
    <string name="guidevideo1_access">Accéder au guide de survie en video</string>
    <string name="guidevideo2">#2 Construire votre premier abris</string>
    <string name="guidevideo2_access">Accéder au guide de construction en video</string>
    <string name="fullscreen">Voir en plein écran</string>
    <string name="back">Retour</string>
    <string name="copyright">© Copyright - Guide Rust 2016"</string>
    <string name="developpeur">Nicolas / Lucas / Adrien  / Dylan \n\nVersion <b>1.0</b></string>
    <string name="join">Rejoignez la communauté Rust sur Steam</string>
    <string name="presentation_guide1">Voici la première partie du guide complet qui débutera avec votre première apparition dans le jeu, et se cloturera avant le début de la fabrication de votre première maison !\nVous-y apprendrez comment bien démarrer le jeu et surtout comment survivre aux premières hostilités qui vous attendent</string>
    <string name="guidecomplet_title0">0. Les deux trois choses à savoir sur Rust</string>
    <string name="texte_guide1_part0">Utiliser un objet dans la barra d"'action : Appuyer sur le numéro correspondant, appuyer une nouvelle fois pour le cacher.\nInterargir avec un objet : Appuyer sur la touche E.\nOuvrir l'inventaire : Appuyer sur la touche "Tab".</string>
    <string name="guidecomplet_title1">1. Votre première apparition</string>
    <string name="texte_guide1_part1">Vous apparaissez avec <b>une torche</b> et <b>un caillou</b>*.\n* Variable suivant le serveur.\n\nLa torche sert à vous éclairer, frapper en cas d"'hostilité, et le cailloux vous sert pour tout le reste !\n\nEn premier lieu faites un petit tour afin de voir s’il n’y a pas de population hostile dans les parages (joueurs ou animaux). Et tenter de trouver une zone plus ou moins abondante en ressources (roche, bois, animaux).</string>
    <string name="guidecomplet_title2">2. Premiers crafts et premiers farms</string>
    <string name="texte_guide1_part2_1">La toute première chose que vous devez faire est de récolter <b>du wood (bois)</b> ainsi que <b>de la stone (pierre)</b>. Pour cela munissez vous de votre cailloux de départ et diriger vous vers un arbre ou une roche, puis cliquez avec votre souris (clic gauche) afin de commencer à récolter des ressources dans votre inventaire.</string>
    <string name="texte_guide1_part2_2">Les objets collectés peuvent être observés directement à l"’aide des info-bulles qui apparaissent en bas à droit de l"’écran,juste au dessus de vos barres d"'états vitales.\nElles sont aussi visible dans votre inventaire (tapez sur la touche "<b>Tab</b>") Mais tout d'abord, voyons de plus près cet inventaire !</string>
    <string name="texte_guide1_part2_3">Une fois que vous avez récolté suffisament <b>de wood et de stones</b> à l"'aide de <b>votre caillou</b>, fabriquez vous dans un premier temps <b>une wooden spear</b>, <b>une stone hatchet</b> et <b>une stone pick axe</b>.\n\n <b>La wooden spear</b> vous sera forte utile pour partir faire votre première chasse (sangliers, poulets et cerfs pour le moment !)\n\n <b>La stone pick axe</b> ainsi que <b>la stone hatchet</b>, elles, vous serons indispensables pour les récoltes futures et ce, durant tout le jeu.\n\nEnfin, craftez vous un <b>arc / hunting bow</b> (x200 wood / x50 cloth) et des <b>flèches / arrow</b> (pour 4 fléche : x10 stone / x25 wood) afin de vous défendre contre les bêtes hostiles (loup et ours) mais aussi pour vous défendre contre les joueurs.</string>
    <string name="guidecomplet_title3">3. Premier camp (temporaire)</string>
    <string name="texte_guide1_part3_1">Votre premier camp n\'est que temporaire, celui si vous permettra dans un premier temps d\'avoir un point de repère ainsi qu\'un point de respawn en cas de mort.
        Il devra être composé d\'un <b>lit / sleeping bag</b> ( x30 cloth / x100 wood ), d\'un <b>feu de camp / camp fire</b> ( x100 wood ) et d\'une <b>caisse / wood storage</b> ( x100 wood ).\n\n
        Ces trois éléments sont absolument nécessaire à votre survie, ne les négligez pas. Chacun d\'entre eux ont un système de menu en commun.\n\n
        Pour accéder à ce système, il suffit de fixer l\'objet et de maintenir la touche E enfoncée.\n\n
        Le <b>sleeping bad</b> vous permet de revivre à cet endroit si vous mourrez et peut constituer un véritable point de repère. En maintenant la touche E vous pouvez soit : renommer votre point de repère (cela peut l\'identifier dans le cas où vous en possédez plusieurs) ou l\'assigner à un ami donnant alors toutes les possibilités de revivre etc à cette personne.\n\n
        Le <b>camp fire</b> vous permettra d\'améliorer votre confort mais aussi de cuir la viande que vous aurez trouvé durant votre chasse. La vie que vous aurez perdu remontera alors progressivement. En maintenant la touche E, vous pouvez soit éteindre ou allumer le feu, soit accéder à l\'inventaire de celui-ci (5 compartiments).\n\n
        Enfin, le <b>wood storage</b> permettra simplement de stocker vos trouvailles de la journée. La caisse est très petite en volume il est donc nécessaire de ne pas traîner sur votre camp temporaire.</string>
    <string name="main2">ListView/Adapter (non bindée)</string>
    <string-array name="titles">
        <item>Bienvenue sur GuideRust</item>
        <item>Le site officiel de Rust - rustplay.com</item>
        <item>#DevBlog 96 - Optimisations graphiques</item>
        <item>La survie dans Rust - Youtube</item>
        <item>La construction dans Rust - Youtube</item>
        <item>Rejoignez la communauté Rust sur Steam</item>

    </string-array>
    <string-array name="descriptions">
        <item>Découvrez des guides complets en vidéos ou en image, accéder au site depuis votre mobile plus facilement et restez à jour !</item>
        <item>Découvrez toutes les nouveautés du jeu Rust, les mises à jours, les forums de la communauté, les fan arts et bien d"'autres encore sur le site officiel dédié au jeu :\n\n<b>http://playrust.com</b>.</item>
        <item>Dans ce nouveau DebBlog n°96, nous pouvons tout d"'abord trouver <b>une optimisation graphique des dungeons</b>.\n\nDe nouveaux items voient aussi le jour comme <b>la lampe murale</b>, mais aussi de nouveaux items corporels.</item>
        <item>Vidéo Youtube de la chaine <b>JosInGame</b>, vous apprendrez ici comment survivre à votre première nuit dans le jeu mais aussi comment <b>bien débuter</b></item>
        <item>Vidéo Youtube de la chaine <b>JosInGame</b>, cette fois-ci vous apprendrez comment construire votre première maison mais aussi comment <b>optimiser votre abris</b> pour le rendre moins vulnérable aux raids</item>
        <item>Nicolas / Lucas / Adrien  / Dylan \n\nVersion <b>1.0</b></item>
    </string-array>
    <string-array name="buttons">
        <item>Accéder à notre guide complet</item>
        <item>Accéder au site officiel de Rust</item>
        <item>Voir cet article</item>
        <item>Accéder au guide de survie en video</item>
        <item>Accéder au guide de construction en video</item>
        <item>© Copyright - Guide Rust 2016</item>
    </string-array>
    <string name="weapon_header">Les armes - Rust</string>
    <string name="weapon_title">Liste complète des armes</string>
    <string name="ressources_header">Les ressources - Rust</string>
    <string name="ressources_title">Liste complète des ressources</string>
    <string name="map_header">Map - Rust</string>
    <string name="map_title">Les maps sur Rust</string>
    <string name="map_text1">Les maps sur Rust ne sont pas prédéfinis, elles sont toutes procédurales et générées aléatoirement. Elles varient donc toutes selon le serveur. Sur chaque map sont cela-dit créés des points de repères permettant de vite se souvenir de certains points importants (sources, bâtiments et bien d"'autres..).\n\nIls sont représentés sous forme de symboles. Chacun de ces lieux est nommé différement mais, tous appartiennent à la catégorie "Monuments" et sont très prisés par les joueurs du fait de la présence de nombreux loots cachés dans des caisses et des barrils\n\nVoici la signification de chacun d'eux :</string>
    <string name="map_symbol_title1">Lighthouse</string>
    <string name="map_symbol_text1">Ce monument se trouve au bord de l"'eau et fait l'objet d'un excellent point de repère du fait de sa hauteur.</string>
    <string name="map_symbol_title2">Cave</string>
    <string name="map_symbol_text2">La cave (Grotte) est un refuge très intéressant en <b>début de partie</b> mais il faut soit y faire sa base soit la fuir, car elle sera bien évidement très convoitée par les autres joueurs.</string>
    <string name="map_symbol_title3">Satellite Dish</string>
    <string name="map_symbol_text3">Le site des antennes satellites se trouve généralement en hauteur dans <b>les montagnes</b> et est un endroit parfait pour trouver des <b>blueprints</b> cachés dans <b>des petites boites ou dans des barrils</b>.</string>
    <string name="map_symbol_title4">Sphere Tank</string>
    <string name="map_symbol_text4">Ce monument (aussi appelé Oil Tank) est très apprécié des joueurs pour ses loots mais aussi pour des séances de <b>PvP</b>. Site déconseillé aux <b>débutants</b>.</string>
    <string name="map_symbol_title5">RadTown</string>
</resources>