<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_weapon"
            android:icon="@drawable/weapon"
            android:title="@string/armes" />
        <item
            android:id="@+id/nav_resource"
            android:icon="@drawable/resource"
            android:title="@string/resource" />
        <item
            android:id="@+id/nav_ammunition"
            android:icon="@drawable/ammunition"
            android:title="@string/ammunition" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/tools"
            android:title="@string/tools" />
    </group>

    <item android:title="@string/about_rust">
        <menu>
            <item
                android:id="@+id/nav_minimap"
                android:icon="@drawable/minimap"
                android:title="@string/map" />
            <item
                android:id="@+id/nav_game_description"
                android:icon="@drawable/game"
                android:title="@string/description" />
            <item
                android:id="@+id/nav_a_propos"
                android:icon="@drawable/a_propos"
                android:title="@string/about_us" />
        </menu>
    </item>

    <item android:title="@string/more">
        <menu>
            <item
                android:id="@+id/nav_more"
                android:icon="@drawable/listview"
                android:title="@string/listview_version" />

        </menu>
    </item>

</menu>
